# EthereumCompiler

./: .gitignore
ANTLR/: README.txt  antlr  setup
ANTLR/grammars/: State.g4
State/: README.txt  convert
State/examples/: majorpass.state  multisig.state  rent.state  singlesig.state
State/lib/: CodeGen.py  State.tokens  StateLexer.py  StateListener.py  StateParser.py  driver.py
solidify/: LICENSE.txt  README.md  solidify
solidify/passes/: CMakeLists.txt  README.md
solidify/passes/skeleton/: CMakeLists.txt  Skeleton.cpp
solidify/passes/solidify/: CMakeLists.txt  Solidify.cpp
solidify/tests/: fib.bc  fib.cpp  fib.ll  runtests  sample.bc  sample.ll
